体育列表按钮修改

--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -490,7 +490,7 @@
                     android:layout_height="30dp"
                     android:background="@color/color_bbbbbb_ffffff"
                     android:orientation="horizontal"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     tools:visibility="visible">
 
                     <TextView
