--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -6,17 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/color_141414_F3F4F5"
     android:orientation="vertical"
-    android:layout_marginLeft="@dimen/margin_14"
-    android:layout_marginRight="@dimen/margin_14"
     tools:context=".ui.feedback.suggest.FeedbackSubmitFragment">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginTop="@dimen/margin_5"
+        android:layout_marginHorizontal="@dimen/margin_9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/transparent_black_0"
         app:cardCornerRadius="@dimen/margin_5"
-        app:cardElevation="5dp"
+        app:cardElevation="@dimen/margin_5"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -87,9 +86,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginHorizontal="@dimen/margin_9"
         app:cardBackgroundColor="@color/transparent_black_0"
         app:cardCornerRadius="@dimen/margin_5"
-        app:cardElevation="5dp"
+        app:cardElevation="@dimen/margin_5"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -161,6 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_8"
+            android:layout_marginHorizontal="@dimen/margin_15"
             android:text="@string/self_limit_per_bet_limit_user"
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp"
@@ -172,6 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_6"
+            android:layout_marginHorizontal="@dimen/margin_15"
             android:text="@string/self_limit_per_bet_limit_user_limit"
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp"
@@ -184,6 +186,7 @@
         android:id="@+id/btnConfirm"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginHorizontal="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_15"
         android:layout_marginBottom="@dimen/margin_14"
         android:background="@drawable/ic_submit"
