--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -60,37 +60,28 @@
                 app:layout_constraintStart_toEndOf="@+id/iv_menu_left"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/cl_bet_all_sports"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
-                android:minWidth="100dp"
-                android:paddingHorizontal="5dp"
+                android:minWidth="90dp"
                 android:layout_marginEnd="13dp"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
+                android:duplicateParentState="true"
+                android:background="@drawable/selector_bg_home_tab_menu">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_all_sports"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="13dp"
                     android:duplicateParentState="true"
-                    android:background="@drawable/selector_bg_home_tab_menu"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/tv_all_sports"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="13dp"
-                        android:duplicateParentState="true"
-                        android:text="@string/all_sport"
-                        android:textSize="@dimen/textSize14sp"
+                    android:text="@string/all_sport"
+                    android:textSize="@dimen/textSize14sp"
                         android:textColor="@color/selector_blue_white" />
 
                     <ImageView
@@ -103,9 +94,6 @@
                         android:duplicateParentState="true"
                         android:src="@drawable/selector_blue_white_arrow" />
                 </LinearLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
