--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/ll_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_14"
                 android:background="@color/color_191919_FCFCFC"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/date_range_selector">
