--- a/app/src/main/res/layout/online_crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/online_crypto_pay_fragment.xml
@@ -41,9 +41,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:text="@string/title_currency"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize13sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/color_9BB3D9_535D76"
+                    android:textSize="@dimen/textSize13sp" />
 
                 <View
                     android:layout_width="1dp"
@@ -51,7 +50,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@color/color_666666_bcbcbc" />
+                    android:background="@color/color_666666_bcbcbc"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/txv_currency"
@@ -61,8 +61,8 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="center_vertical|left"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp" />
+                    android:textColor="@color/color_9BB3D9_535D76"
+                    android:textSize="@dimen/textSize13sp" />
 
                 <ImageView
                     android:layout_width="35dp"
@@ -97,9 +97,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:text="@string/title_recharge_account"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize13sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/color_9BB3D9_535D76"
+                    android:textSize="@dimen/textSize14sp" />
 
                 <View
                     android:layout_width="1dp"
@@ -107,6 +106,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
+                    android:visibility="invisible"
                     android:background="@color/color_666666_bcbcbc" />
 
                 <TextView
