--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -380,7 +380,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:layout_marginHorizontal="@dimen/margin_18"
+                android:paddingHorizontal="@dimen/margin_18"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_radius_4_button_white">
 
@@ -391,40 +391,26 @@
                     android:textColor="@color/color_414655"
                     android:textSize="@dimen/textSize14sp"/>
                 <TextView
-                    android:id="@+id/tv_calendar"
+                    android:id="@+id/tv_time"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableRight="@drawable/ic_arrow_gray"
                     android:drawablePadding="7dp"
                     android:gravity="center_vertical"
                     android:paddingHorizontal="12dp"
                     android:text="@string/select_date"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize12sp"
-                    tools:text="2022-06-30" />
+                    tools:text="2020-13-25 19:35:35 (GMT+8)" />
 
-                <View
-                    android:layout_marginTop="@dimen/margin_12"
-                    android:layout_marginEnd="@dimen/margin_12"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@null"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_icon_timev_01" />
 
-                <TextView
-                    android:id="@+id/tv_hour"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-
-                    android:drawableRight="@drawable/ic_arrow_gray"
-                    android:drawablePadding="7dp"
-                    android:gravity="center_vertical"
-                    android:paddingHorizontal="12dp"
-                    android:text="@string/select_time"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize12sp"
-                    tools:text="08:00~09:00" />
             </LinearLayout>
 
             <TextView
