--- a/app/src/main/res/layout/item_match_result_title.xml
+++ b/app/src/main/res/layout/item_match_result_title.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="@drawable/divider_color_white6"
-    android:orientation="vertical"
-    android:showDividers="end">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
