--- a/app/src/main/res/layout/item_outright_result_outright.xml
+++ b/app/src/main/res/layout/item_outright_result_outright.xml
@@ -2,60 +2,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     android:background="@color/color_191919_FCFCFC"
     android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@drawable/divider_color_white6"
-        android:orientation="horizontal"
-        android:showDividers="middle">
+        android:layout_height="60dp"
+        android:background="@color/color_bbbbbb_ffffff"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:orientation="vertical"
             android:padding="12dp">
-
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/color_909090_666666"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="2019-09-20 08:00" />
 
             <TextView
                 android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_FFFFFF_535D76"
                 tools:text="冠軍"
                 android:textSize="@dimen/textSize12sp"
                 android:layout_marginTop="6dp"/>
         </LinearLayout>
 
+        <View
+            android:id="@+id/line"
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tv_winner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="start"
             android:layout_gravity="center"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_535D76"
             android:textStyle="bold"
-            android:textSize="@dimen/textSize14sp"
-            android:padding="8dp"
+            android:textSize="@dimen/textSize12sp"
+            android:paddingHorizontal="14dp"
             tools:text="Bodo/Glimt" />
 
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:gravity="center"
+        android:textColor="@color/color_6C7BA8_6C7BA8"
+        android:background="@color/color_202541_F7F8FC"
+        android:textSize="@dimen/textSize14sp"
+        tools:text="2019-09-20 08:00" />
+
     <View
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
