--- a/app/src/main/res/layout/item_outright_result_title.xml
+++ b/app/src/main/res/layout/item_outright_result_title.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="@drawable/divider_color_white6"
     android:orientation="vertical"
-    android:showDividers="end">
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,36 +15,42 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_weight="2">
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginStart="16dp"
             android:src="@drawable/ic_arrow_down_dark" />
 
         <TextView
             android:id="@+id/tv_season"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2.5"
+            android:paddingHorizontal="10dp"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="start|center_vertical"
             android:maxLines="1"
             android:textStyle="bold"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize14sp"
+            android:textColor="@color/color_025BE8_025BE8"
+            android:textSize="@dimen/textSize12sp"
             tools:text="@string/league" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="@string/winner"
             android:textStyle="bold"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize14sp"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
+            android:textSize="@dimen/textSize12sp"
             tools:text="@string/winner" />
 
 
