--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -25,19 +25,21 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@color/color_2B3859_F3F9FF"
         app:layout_constraintTop_toBottomOf="@id/date_range_selector"
         android:layout_marginTop="@dimen/margin_20">
 
-            <org.cxct.sportlottery.ui.component.StatusSpinnerView
-                android:id="@+id/selector_order_status"
-                android:layout_width="0dp"
-                android:layout_height="44dp"
-                android:layout_weight="1"
-                android:background="@color/color_191919_FCFCFC"
-                app:defaultStatusText="@string/text_account_history_bet"
-                app:listBackground="@drawable/bg_pop_up_arrow"
-                app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/selector_order_status"
+            android:layout_width="0dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:background="@color/color_2B3859_F3F9FF"
+            app:defaultStatusText="@string/text_account_history_bet"
+            app:listBackground="@drawable/bg_pop_up_arrow"
+            app:listWidth="120dp"
+            app:textColor="@color/color_6C7BA8_6C7BA8"
+            app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
     </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
