--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -39,8 +39,7 @@
             app:defaultStatusText="@string/all_order_status"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector"
             app:textColor="#6C7BA8"
-            app:listBackground="@drawable/bg_pop_up_arrow"
-            app:listWidth="120dp"/>
+            app:listBackground="@drawable/bg_pop_up_arrow" />
         <View
             android:layout_gravity="center_vertical"
             android:layout_marginTop="@dimen/margin_12"
