--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -52,7 +52,7 @@
         <LinearLayout
             android:id="@+id/rech_log_column"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/margin_36"
             android:background="@drawable/bg_white_top_radius_deposit_10"
             android:gravity="center"
             android:minHeight="30dp"
@@ -138,5 +138,17 @@
         android:src="@drawable/ic_scroll_to_top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
+    <TextView
+        android:id="@+id/tv_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_191919_FCFCFC"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/no_data"
+        android:textColor="@color/color_909090_666666"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/textSize12sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
