--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_FFFFFF"
+    android:background="@color/color_181922_FFFFFF"
     tools:content="org.cxct.sportlottery.ui.finance.RechargeLogFragment">
     <View
         android:id="@+id/view"
@@ -157,7 +157,7 @@
                         <com.scwang.smart.refresh.layout.SmartRefreshLayout
                             android:id="@+id/view_refresh"
                             android:layout_width="match_parent"
-                            android:layout_height="386dp"
+                            android:layout_height="421dp"
                             app:srlDragRate="0.3"
                             app:srlEnableLoadMore="true"
 
@@ -181,6 +181,7 @@
                     </FrameLayout>
 
     </LinearLayout>
+
     <TextView
         android:id="@+id/tv_no_data_tips"
         android:layout_width="match_parent"
@@ -190,9 +191,10 @@
         android:paddingVertical="12dp"
         android:text="@string/no_data"
         android:textColor="@color/color_909090_666666"
+        android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="@dimen/textSize12sp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
