--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -166,4 +166,5 @@
     <color name="color_9FADC6_535D76">@color/color_9FADC6</color>
     <color name="color_1D1F2D_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_131932_FAFCFF">@color/color_131932</color>
+    <color name="color_181922_FFFFFF">@color/color_181922</color>
 </resources>
