--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -429,6 +429,7 @@
     <color name="color_DFEBFF">#DFEBFF</color>
     <color name="color_10DFEBFF">#10DFEBFF</color>
     <color name="color_EBEDF0">#EBEDF0</color>
+    <color name="color_181922">#181922</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
@@ -489,4 +490,5 @@
     <!--反馈详情-->
     <color name="color_1D1F2D_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_131932_FAFCFF">@color/color_FAFCFF</color>
+    <color name="color_181922_FFFFFF">@color/color_FFFFFF</color>
 </resources>
